<resources>
    <string name="app_name">StatusHub</string>

    <string name="activity_home_query_hint">Search (by jew , 60kg , 182cm)</string>

    <string name="activity_home_favourites">Open Favourites</string>


    <string name="activity_home_sort">Sort By</string>
    <string name="activity_home_height_button">Height</string>
    <string name="activity_home_weight_button">Weight</string>
    <string name="content_authority">com.futuretraxex.statushub.provider</string>
    <string name="sync_account_type">statushub.futuretraxex.com</string>

    <string name="member_view_favourite">Favourite</string>
    <string name="member_view_share">Share</string>
    <string name="member_view_sms">SMS</string>
    <string name="member_view_back">Back</string>

    <string name="empty_fav_view">You got no favourites :(</string>
    <string name="empty_status_view">No data :( , Check your internet connection.</string>

    <string name="activity_member_profile_dob_text">DOB</string>
    <string name="activity_member_profile_weight">Weight</string>
    <string name="activity_member_profile_height">Height</string>
    <string name="activity_member_profile_is_veg">Veg ?</string>
    <string name="activity_member_profile_drinks">Drinks ?</string>
    
    <string name="weight_string">%.2f Kg</string>
    <string name="height_string">%d cm</string>

    <string name="total_users">Total Users : %d</string>
    <string name="api_hits">API Hits : %s</string>


    <string name="activity_home_title">StatusHub</string>
    <string name="activity_favourites_title">Favourites</string>
    <string name="activity_member_profile_title">User</string>
</resources>
