<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sativa"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">


    <SearchView
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants"
        android:focusable="false"
        android:iconifiedByDefault="false"
        android:queryHint="@string/activity_home_query_hint"></SearchView>

    <LinearLayout
        android:id="@+id/linear_layout_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchbar"
        android:paddingBottom="@dimen/activity_home_padding_favourites"
        android:paddingTop="@dimen/activity_home_padding_favourites">

        <Button
            android:id="@+id/open_favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/border_favourites"
            android:drawableStart="@drawable/ic_favorite_border_black_24dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/activity_home_favourites"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:textSize="@dimen/activity_home_textsize_favourites" />

        <Spinner
            android:id="@+id/spinner_ethnic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_favourites"
            android:entries="@array/ethnic_array"
            android:padding="13dp"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:textSize="@dimen/activity_home_textsize_favourites"
            tools:entries="@array/ethnic_array"

            >

        </Spinner>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sorting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_sort_black_24dp"
            android:text="@string/activity_home_sort" />

        <Button
            android:id="@+id/sortByHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_swap_vert_black_24dp"
            android:text="@string/activity_home_height_button" />

        <Button
            android:id="@+id/sortByWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_swap_horiz_black_24dp"
            android:text="@string/activity_home_weight_button" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_apidata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sorting_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/member_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Total member : 0" />

        <TextView
            android:id="@+id/api_use_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="API Hits : 420" />
    </LinearLayout>


    <ListView
        android:id="@+id/status_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_layout_apidata"
        android:layout_below="@id/linear_layout_fav"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:listSelector="@android:color/transparent">


    </ListView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/progress_bar"
        android:visibility="visible" />


    <TextView
        android:id="@+id/empty_status_view"
        android:text="@string/empty_status_view"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:textColor="@android:color/black"
        android:layout_height="match_parent" />

</RelativeLayout>
