<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:background="@drawable/sativa"
    android:fitsSystemWindows="true"
    >



    <SearchView
        android:id="@+id/searchbar"
        android:queryHint="@string/activity_home_query_hint"
        android:iconifiedByDefault="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants"
        >
    </SearchView>

    <LinearLayout
        android:layout_below="@id/searchbar"
        android:id="@+id/linear_layout_fav"
        android:paddingTop="@dimen/activity_home_padding_favourites"
        android:paddingBottom="@dimen/activity_home_padding_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/open_favourites"
            android:drawableStart="@drawable/ic_favorite_border_black_24dp"
            android:text="@string/activity_home_favourites"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
            android:textSize="@dimen/activity_home_textsize_favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_favourites"
            />

        <Spinner
            android:id="@+id/spinner_ethnic"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/ethnic_array"
            tools:entries="@array/ethnic_array"
            >

        </Spinner>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/sorting_layout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/activity_home_sort"
            android:drawableStart="@drawable/ic_sort_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/sortByHeight"
            android:text="@string/activity_home_height_button"
            android:drawableStart="@drawable/ic_swap_vert_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/sortByWeight"
            android:text="@string/activity_home_weight_button"
            android:drawableStart="@drawable/ic_swap_horiz_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_apidata"
        android:orientation="horizontal"
        android:layout_above="@id/sorting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/member_count"
            android:text="Total member : 0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/api_use_count"
            android:text="API Hits : 420"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <ListView
        android:id="@+id/status_list"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:layout_below="@id/linear_layout_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_layout_apidata"
        >


    </ListView>


</RelativeLayout>
