<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/sativa"
    tools:context="com.futuretraxex.statushub.Activity.MemberProfileActivity">

    <TextView
        android:id="@+id/ethnicity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ethnicity"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:background="@drawable/border_favourites"
        />



    <LinearLayout
        android:id="@+id/bottom_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/favourite_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/border_favourites"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/member_view_favourite"
                />
            <Button
                android:id="@+id/share_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/border_favourites"
                android:drawableStart="@drawable/ic_share_black_24dp"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/member_view_share"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/border_favourites"
                android:drawableStart="@drawable/ic_swap_horiz_black_24dp"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/member_view_back"
                />
            <Button
                android:id="@+id/sms_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/border_favourites"
                android:drawableStart="@drawable/ic_textsms_black_24dp"
                android:gravity="center"
                android:paddingStart="15dp"
                android:text="@string/member_view_sms"
                />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/status"
        tools:text="This is a long status"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_above="@id/bottom_content"
        android:background="@drawable/border_favourites"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        />

    <LinearLayout
        android:background="@drawable/border_favourites"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:id="@+id/top_content"
        android:layout_below="@id/ethnicity"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/status">
        <ImageView
            android:id="@+id/large_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_photo_black_24dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dob_text"
                    android:text="@string/activity_member_profile_dob_text"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="2dp"
                    android:drawableStart="@drawable/cake_dob"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/dob"
                    tools:text="0-0-0"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/activity_member_profile_weight"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="2dp"
                    android:drawableStart="@drawable/ic_face_black_24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/activity_member_profile_height"
                    android:drawableStart="@drawable/ic_accessibility_black_24dp"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/height"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/drinks_text"
                    android:text="@string/activity_member_profile_drinks"
                    android:drawableStart="@drawable/beer"
                    android:gravity="start|center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/drinks"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/veg_text"
                    android:text="@string/activity_member_profile_is_veg"
                    android:drawableStart="@drawable/veg"
                    android:gravity="start|center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/veg"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
